RESOLVED FIXED 222881
[GPU Process] Test under http/tests/canvas/color-font fail when GPU process rendering is enabled for 2D Canvas
https://bugs.webkit.org/show_bug.cgi?id=222881
Summary [GPU Process] Test under http/tests/canvas/color-font fail when GPU process r...
Said Abou-Hallawa
Reported 2021-03-07 01:06:04 PST
These tests seem flaky when GPU rendering is enabled for 2D Canvas: http/tests/canvas/color-fonts/fill-gradient-sbix-2.html http/tests/canvas/color-fonts/fill-gradient-sbix-3.html http/tests/canvas/color-fonts/fill-gradient-sbix-4.html http/tests/canvas/color-fonts/stroke-gradient-sbix-2.html http/tests/canvas/color-fonts/stroke-gradient-sbix-3.html http/tests/canvas/color-fonts/stroke-gradient-sbix-4.html
Attachments
Patch (11.93 KB, patch)
2021-05-09 17:20 PDT, Cameron McCormack (:heycam)
no flags
Radar WebKit Bug Importer
Comment 1 2021-03-07 19:27:32 PST
Simon Fraser (smfr)
Comment 2 2021-03-10 11:57:38 PST
*** Bug 223034 has been marked as a duplicate of this bug. ***
Cameron McCormack (:heycam)
Comment 3 2021-05-09 17:20:18 PDT
Myles C. Maxfield
Comment 4 2021-05-09 20:44:01 PDT
At first glance this looks great. However I want to go in a bit more detail on Monday about trying to figure out if the code this patch adds is sufficient to handle having two contexts share the same recorder.
EWS
Comment 5 2021-05-18 21:21:21 PDT
Committed r277715 (237894@main): <https://commits.webkit.org/237894@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428144 [details].
Note You need to log in before you can comment on or make changes to this bug.