Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.cpp
@@ -43,16 +43,28 @@ Recorder::Recorder(GraphicsContext& context, DisplayList& displayList, const Gra
     : GraphicsContextImpl(context, initialClip, AffineTransform())
     , m_displayList(displayList)
     , m_delegate(delegate)
+    , m_isNested(false)
     , m_drawGlyphsRecorder(*this, drawGlyphsDeconstruction)
 {
     LOG_WITH_STREAM(DisplayLists, stream << "\nRecording with clip " << initialClip);
     m_stateStack.append({ state, initialCTM, initialClip });
 }
 
+Recorder::Recorder(Recorder& parent, GraphicsContext& context, const GraphicsContextState& state, const FloatRect& initialClip, const AffineTransform& initialCTM)
+    : GraphicsContextImpl(context, initialClip, AffineTransform())
+    , m_displayList(parent.m_displayList)
+    , m_delegate(parent.m_delegate)
+    , m_isNested(true)
+    , m_drawGlyphsRecorder(*this, parent.m_drawGlyphsRecorder.drawGlyphsDeconstruction())
+{
+    m_stateStack.append({ state, initialCTM, initialClip });
+}
+
 Recorder::~Recorder()
 {
     ASSERT(m_stateStack.size() == 1); // If this fires, it indicates mismatched save/restore.
-    LOG(DisplayLists, "Recorded display list:\n%s", m_displayList.description().data());
+    if (!m_isNested)
+        LOG(DisplayLists, "Recorded display list:\n%s", m_displayList.description().data());
 }
 
 void Recorder::getPixelBuffer(const PixelBufferFormat& outputFormat, const IntRect& sourceRect)
@@ -442,8 +454,22 @@ void Recorder::clipToImageBuffer(ImageBuffer& imageBuffer, const FloatRect& dest
 
 void Recorder::clipToDrawingCommands(const FloatRect& destination, DestinationColorSpace colorSpace, Function<void(GraphicsContext&)>&& drawingFunction)
 {
+    GraphicsContext nestedContext([&](GraphicsContext& context) {
+        auto initialClip = FloatRect(FloatPoint(), destination.size());
+
+        // The initial CTM matches ImageBuffer's initial CTM.
+        AffineTransform transform = getCTM(GraphicsContext::DefinitelyIncludeDeviceScale);
+        FloatSize scaleFactor(transform.xScale(), transform.yScale());
+        auto scaledSize = expandedIntSize(destination.size() * scaleFactor);
+        AffineTransform initialCTM;
+        initialCTM.scale(1, -1);
+        initialCTM.translate(0, -scaledSize.height());
+        initialCTM.scale(scaledSize / destination.size());
+
+        return std::unique_ptr<Recorder>(new Recorder(*this, context, GraphicsContextState(), initialClip, initialCTM));
+    });
     append<BeginClipToDrawingCommands>(destination, colorSpace);
-    drawingFunction(graphicsContext());
+    drawingFunction(nestedContext);
     append<EndClipToDrawingCommands>(destination);
 }
 
